--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -410,6 +410,8 @@ Examples from the data of participants using GDPs as a framework for organisatio
 
 ---
 
+MOVE? INCLUSIVE DESIGN SUMMARY AT END.
+
 These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
 
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
@@ -418,22 +420,15 @@ The use of a menu / collection of resources can be considered an inclusive educa
 
 ----
 
-Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10)
+Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10). SHOULD THIS BE A SEPARATE SECTION?
 
-_In summary,_ The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes.
-
-**However - qualifications**
-Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways. For example, in Vignette 3 (V3.a) Ed cedes this aspect to his father in a way explored in the section below on division of labour
+Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways. For example, in Vignette 3 (V3.a) Ed cedes this aspect to his father in a way explored in the section below on division of labour.
 
 It is also important to note that there are potential issues concerning validity of observations on the use of the GDP menu and related concepts as a navigational tool by participants and to leverage access to relevant help, due to their nature as being introduced for that purpose. The danger here is of circular reasoning in methodology. At this early stage, this study acknowledges the potential of circular reasoning, but observes the potential of GDP adoption and in particular to note evolution of practices by participants. In addition, this process of using GDPs in this way was also _discovered_ by myself via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction.
 
-
-
+Thus in summary, the evidence supports the potential of a menu of GDPs to address the tensions between choice based approaches and the danger of lack of of support in P1 with technical and organisational processes. AND..
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
-
-
-
 
 <!--
 At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. -->
@@ -464,6 +459,7 @@ This section prioritises describing the code patching process using examples and
 
 ### GDPs used to scaffold ideation and prioritisation processes (800)
 
+(AND REFLECTION?)
 <!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
 <!-- NOTE - ADD MORE ON GESTURING  -->
 
@@ -482,17 +478,23 @@ Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
 Mark: So you want to get your person animated that’s the main thing.
 Mark: Shall we concentrate on that and changing the platforms into something different? -->
 
-In Vignette 7 (see V7.a), home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template. In the same vignette (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping.
+In Vignette 7 (see V7.a), home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. The use of gestures in their interaction reinforces thier spoken references to GDP concepts. ADD TABLE FOR GESTURES?
 
-By way of contrast, other pairs take advantage of paper prototyping (see Appendix.prototyping) . Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly.
+    Toby: Erm. Thinking about what game to do . I was thinking can we make like a pacman game kind of thing (indicates movement of character with hands)
+    Dan: If we had an on the top game rather than a platform game
 
-The use of GDPs to support visual prototyping is also undertaken by Mark and Ed explored in more detail in Appendix.tech.prototyping
+In the same vignette (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping.
+
+By way of contrast, other pairs take advantage of paper prototyping (see Appendix.prototyping) . Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. The use of GDPs to support visual prototyping is also undertaken by Mark and Ed explored in more detail in Appendix.tech.prototyping
 
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
 To end this section, it is of value to link this use of GDPs terminology and visual prototyping techniques, to existing research on the development of shared language to support joint work and guided participation.
+
 INSERT RESEARCH on joint attention, and joint problem space and the importance language in this process from a sociocultural perspective.
+INSERT RESEARCH - visual prototyping and gestures as tools in building and joint understanding in the ZPD?
+
 
 <!--
 GET A BETTER SCREEN SHOT OF THE CHANGED DESIGN TOBY ETC IF NEEDED.
