work on vignette and images in particular. some only on my debian hard drive

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -478,10 +478,7 @@ Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
 Mark: So you want to get your person animated that’s the main thing.
 Mark: Shall we concentrate on that and changing the platforms into something different? -->
 
-In Vignette 7 (see V7.a), home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. The use of gestures in their interaction reinforces thier spoken references to GDP concepts. ADD TABLE FOR GESTURES?
-
-    Toby: Erm. Thinking about what game to do . I was thinking can we make like a pacman game kind of thing (indicates movement of character with hands)
-    Dan: If we had an on the top game rather than a platform game
+In Vignette 7 (see V7.a), home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
 In the same vignette (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping.
 
@@ -494,6 +491,7 @@ To end this section, it is of value to link this use of GDPs terminology and vis
 
 INSERT RESEARCH on joint attention, and joint problem space and the importance language in this process from a sociocultural perspective.
 INSERT RESEARCH - visual prototyping and gestures as tools in building and joint understanding in the ZPD?
+
 
 
 <!--
@@ -591,7 +589,8 @@ Once the code for the new game mechanic has been added, the child is guided to t
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, the following section explores the use of GDPs at the community plane of activity. While Rogoff's earlier analysis of activity on a cultural plane emphasised the metaphor of apprenticeship, focusing on an already existing community, her later work with Gutiérrez [@gutierrez_cultural_2003] places greater emphasis on cultural activity as dynamic. This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts.
+Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, the following section explores the use of GDPs at the community plane of activity. While Rogoff's earlier analysis of activity on a cultural plane emphasised the metaphor of apprenticeship, focusing on an already existing community, her later work with Gutiérrez [@gutierrez_cultural_2003] places greater emphasis on cultural activity as dynamic.
+ADD TABLE FOR GESTURES?This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts.
 
 ### The role of GDPs to facilitate learners to design for others
 
@@ -617,8 +616,10 @@ NOTE #### GDP concepts and language used in informal feedback for peers to influ
 
 
 There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
-DEVELOP THIS POINT.
+DEVELOP/CLARIFY THIS POINT IN RELATION TO THE RQS
 
+
+OTHER DATA?
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations. BRIEFLY LIST HERE
 
 INSERT VIDEO DATA SUPPORT
@@ -637,7 +638,6 @@ E.g. The use of GDPs to facilitate learners to design for others was present in 
 GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014].
 
 Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
-
 
 
 In the last chapter, I outlined processes facilitating participants in creating and incorporating graphical, audio assets, and narrative elements into their games, and, referencing Appendix.tech.gameframework, briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs, which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of pattern polish/aesthetics, in Vignette 5, Madiha and Nasrin show identification with the graphical-making process and the process of bringing it into the game. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community. Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
@@ -676,9 +676,6 @@ ADD IF RELEVANT - research on funds of knowledge motives or benefits of this beh
 Article on intangibility of game feel.2025-1-8-DiscussionConclusion
  https://www.gamedeveloper.com/design/game-feel-the-secret-ingredient -->
 
-
-
-
 #### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6
 
 This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [ moje2001maestro].
@@ -703,24 +700,12 @@ Within the emerging idioculture of the game-making sessions, and during playtest
 
 As the process of playtesting emerged, community norms began to develop, some of which where influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game.
 
-In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
+In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels on to yours?"_
 
-     Bertie: Why’s that enemy in every level
-     Toby: He’s not.
-     Bertie: Can you show me how you add more levels on to yours?
-     Toby: Yeah sure.
-     Pause
-     Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
-     Pause
-     Bertie: It’s like parkours in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
-     Toby: Er not really.
-     Bertie: Or seen it?
-     Bertie: That’s like my second level.
-     Toby: Ah so hard (Toby fails at a high level on his game and starts to move off)
-     Toby: (To someone else  calling for attention)  No I’m helping Bertie.
-     _(Toby then follows Bertie to his workstation to help him implement more levels.)_
+The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
-This exchange shows the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents. Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+
+Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
 
 <!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
