--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -602,8 +602,6 @@ The use of GDPs, particularly during playtesting, can support the process of ima
 
 Susanna shares *"Must be quite hard to get through that door."* when Tehillah places the exit door high above a platform. She then continues, *“It’s no fun having a game without any hazards to avoid.”* Tehillah (child) seems determined to remove all hazards. *"It is for me!"* she counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play.  However, a later interaction with a peer shows that Tehillah (child) is indeed imagining the experience of the immediate audience of fellow game makers and supporting students. *"I like making it frustrating. That other people find it frustrating!"* Tehillah (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
 
-
-
 <!-- While Susanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Tehillah's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 wider goal of making an engaging game if it interferes with the engagement of the test users. -->
 <!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
@@ -614,17 +612,15 @@ One is just to make a playable game experience which by design involves an imagi
 <!--emonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
 NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-
 There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
-DEVELOP/CLARIFY THIS POINT IN RELATION TO THE RQS
 
-
-OTHER DATA?
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations. BRIEFLY LIST HERE
-
-INSERT VIDEO DATA SUPPORT
+OTHER DATA? INSERT VIDEO DATA SUPPORT
 E.g. The use of GDPs to facilitate learners to design for others was present in 6 of the 12 video capture sessions analysed.
 
+The two examples explored above serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations.
+
+CHAT INTERPRETATION ORE LEAVE TILL DISCUSSION?
+In both situations,
 
 <!-- children come and play Madiha's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Madiha comments "It's so frustrating."  -->
 
@@ -635,28 +631,18 @@ E.g. The use of GDPs to facilitate learners to design for others was present in 
 
 <!-- [Be sure to explore context further and put in intro]. -->
 
-GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014].
-
-Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
+GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
 
-In the last chapter, I outlined processes facilitating participants in creating and incorporating graphical, audio assets, and narrative elements into their games, and, referencing Appendix.tech.gameframework, briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs, which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of pattern polish/aesthetics, in Vignette 5, Madiha and Nasrin show identification with the graphical-making process and the process of bringing it into the game. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community. Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
+In the last chapter, I outlined processes facilitating participants in creating and incorporating graphical, audio assets, and narrative elements into their games, and, referencing Appendix.tech.gameframework, briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs, which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests.
 
-<!-- EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER. -->
+This point is well illustrated via the domain of polish/aesthetics in Vignette 5, where Madiha and Nasrin show identification with the graphical-making process and the process of bringing that aspect of creativity into their games. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community. Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
 
-In addition to issues of aesthetics explored in the section above, home knowledge of game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game during playtesting. EXPLORE A BIT MORE
+In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires. As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics.  
 
-Turning to game mechanics, Bertie comments on Toby's game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"* (see V1.b) Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns.
+Thus observations from video data in this study support existing research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1]. I also propose that MDA framework can be useful to facilitators to plan for choice in a way aligned with existing inclusive pedagogy, a point I explore in more detail in the discussion section. 
 
-While this study is exploratory and not designed to be representational, observations from video data in this study support existing research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1].
-
-
-THIS IS VERY GENERAL ABOUT CHOICE NOT INTERESTS
-The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests.
-
-
-
-<!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
+<!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapting behaviourser six.
 IS THIS NOW REALLY NEED - OR MOVE TO APPENDIX?   -->
 
 <!-- _Summary_
